tests/programs/invalid/increment_and_decrement.java
public class increment_and_decrement {
  public int m(int x) {
    x++; x--; ++x; return --x;
  }
}